--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <title>VPI, A Distribution Company.</title>
 <link rel="stylesheet" href="css/style.css"/>
 <link rel="stylesheet" href="css/footer.css"/>
+<link rel="stylesheet" href="css/dropdown.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha384-esnPbY6pGdWGDRkW6F6bz36U3uWswJ65URoyq3FTe3D5eDjdtcewAAslO0I9dsCe" crossorigin="anonymous"/>
-<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" integrity="sha384-bPV3mA2eo3edoq56VzcPBmG1N1QVUfjYMxVIJPPzyFJyFZ8GFfN7Npt06Zr23qts" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" integrity="sha384-CgeP3wqr9h5YanePjYLENwCTSSEz42NJkbFpAFgHWQz7u3Zk8D00752ScNpXqGjS" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"
@@ -20,184 +20,182 @@ integrity="sha256-C6CB9UYIS9UJeqinPHWTHVqh/E1uhG5Twh+Y5qFQmYg="   crossorigin="a
 </head>
 
 <body>
-<!-- Header -->
-<nav id="scrollNav">
-    <ul>
-        <li>
-		    <a href="#section1" data-number="1">
-	            <span class="cd-dot"></span>
-	            <span class="cd-label">Intro</span>
-	        </a>
-		</li>
-	    <li>
-		    <a href="#section2" data-number="2">
-	            <span class="cd-dot"></span>
-	            <span class = "cd-label">About</span>
-	        </a>
-		</li>
-	    <li>
-		    <a href="#section3" data-number="3">
-	            <span class="cd-dot"></span>
-	            <span class = "cd-label">Features</span>
-	        </a>
-		</li>
-	    <li>
-		    <a href="#section4" data-number="4">
-		        <span class="cd-dot"></span>
-		        <span class = "cd-label">Portfolio</span>
-	        </a>
-		</li>
-	    <li>
-		    <a href="#section5" data-number="5">
-		        <span class="cd-dot"></span>
-		        <span class = "cd-label">Pricing</span>
-	        </a>
-		</li>
-</ul>
-</nav>
-<a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
+    <!-- BODY START -->
+    <!-- Side Navigation -->
+    <nav id="scrollNav">
+        <ul>
+            <li>
+    		    <a href="#section1" data-number="1">
+    	            <span class="cd-dot"></span>
+    	            <span class="cd-label">Intro</span>
+    	        </a>
+    		</li>
+    	    <li>
+    		    <a href="#section2" data-number="2">
+    	            <span class="cd-dot"></span>
+    	            <span class = "cd-label">History</span>
+    	        </a>
+    		</li>
+    	    <li>
+    		    <a href="#section3" data-number="3">
+    	            <span class="cd-dot"></span>
+    	            <span class = "cd-label">Services</span>
+    	        </a>
+    		</li>
+    	    <li>
+    		    <a href="#section4" data-number="4">
+    		        <span class="cd-dot"></span>
+    		        <span class = "cd-label">Join Us</span>
+    	        </a>
+    		</li>
+    	    <li>
+    		    <a href="#section5" data-number="5">
+    		        <span class="cd-dot"></span>
+    		        <span class = "cd-label">Vision</span>
+    	        </a>
+    		</li>
+    </ul>
+    </nav>
+    <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
-<header id="header">
-<!-- <div id="headercontent"> -->
-<div id="logo"><a href="index.html"><img src="img/VPItransparent.png"></a></div>
-<div class="noshow">
-    <p>VPI</p>
-</div>
-<nav id="nav">
-    <ul>
-        <li><a href="about.html" class="active">What Are We</a></li>
-        <li><a href="services.html" class="active">Services</a></li>
-        <li><a href="clients.html" class="active">Clients</a></li>
-        <li><a href="contact.html" class="active">Contact VPI</a></li>
-	</ul>
-</nav>
-<!-- </div> -->
-
-</header>
-
-<!-- Content START-->
-<div id="section1" class="cd-section">
-    <div class="content">
-        <h1>VPI</h1>
-        <h2>Stores and distributes goods, services, and related information</h2> <h2>between you and your customer.</h2>
-        <div id="divider"></div>
-        <a href="about.html" id="discover">Discover More</a>
-    </div>
-    <a href="#section2" class="cd-scroll-down cd-img-replace arrow bounce">scroll down</a>
- </div>
-
-<section id="section2" class="cd-section">
-    <!-- <div class="content" > -->
-        <div>
-            <h3>History</h3>
-            <br><br>
-            <p>Vincent Porcaro Inc. (VPI) is a performance-driven third party logistics company that was started 17 years ago in 1996. What started out as a local business in New England grew steadily and expanded into a nationwide company. Now, VPI is a globally recognized company extending as far as Ontario, California & Shenzhen, China. With a corporate office in Providence, Rhode Island on Historic Federal Hill Business District, VPI has offered a variety of services to our customers throughout the years and continues to offer more as technology rapidly grows. These services include assembly, fulfillment and distribution of literature, displays, Point-Of-Purchase (POP) and pick and pack, warehousing and logistics. POP and literature fulfillment has been a specialty at VPI for many years supported by state of the art technology enabling us to provide extraordinary results in this very important fulfillment process. </p>
+    <!-- Header -->
+    <header id="header">
+        <div id="logo">
+            <a href="index.html"><img src="img/VPItransparent.png"></a>
         </div>
-        <div   id="section2History">
-            <img src="img/3pl.jpg">
+        <nav id="nav">
+            <ul>
+                <li><a href="about.html" class="active">What Are We</a></li>
+                <li><a href="services.html" class="active">Services</a></li>
+                <li><a href="clients.html" class="active">Clients</a></li>
+                <li><a href="contact.html" class="active">Contact VPI</a></li>
+        	</ul>
+        </nav>
+    </header>
+    <header class="noshow" id="header2">
+        <input id="toggle" type="checkbox">
+        <label class="toggle-container" for="toggle">
+            <span class="button button-toggle"></span>
+        </label>
+        <!-- The nav menu -->
+        <nav class="nav">
+            <a class="nav-item" href="index.html">Home</a>
+            <a class="nav-item" href="about.html">What Are We</a>
+            <a class="nav-item" href="services.html">Services</a>
+            <a class="nav-item" href="clients.html">Clients</a>
+            <a class="nav-item" href="contact.html">Contact VPI</a>
+        </nav>
+    </header>
+
+    <!-- Content START-->
+    <div id="section1" class="cd-section">
+        <div class="content" id="section1content">
+            <h1>VPI</h1>
+            <h2>Stores and distributes goods, services, and related information</h2> <h2>between you and your customer.</h2>
+            <div id="divider"></div>
+            <a href="about.html" id="discover">Discover More</a>
         </div>
-        <!-- <div id="skyline-container">
-            <div>
-                <img src="img/warehouse.png" />
+        <a href="#section2" class="cd-scroll-down cd-img-replace arrow bounce">scroll down</a>
+     </div>
+
+     <!-- Section "2", the "Our History" Section -->
+    <section id="section2" class="cd-section sampleSection">
+        <div class="sampleContainer">
+            <div class="herop">
+                <h3>Our History</h3>
+                <p>Find out more about our humble beginnings</p>
             </div>
-            <div>
-                <img src="img/smallTruck.png" />
+            <div class="hero">
+                <div class="hovercontent">
+                    <div class="hovercontentp">
+                        <p>Vincent Porcaro Inc. (VPI) is a performance-driven third party logistics company that was started 17 years ago in 1996. What started out as a local business in New England grew steadily and expanded into a nationwide company. Now, VPI is a globally recognized company extending as far as Ontario, California & Shenzhen, China.</p>
+                    </div>
+                </div>
+                <img src="img/history.jpg">
             </div>
-            <div>
-                <img src="img/skyline.png" />
+        </div>
+    </section>
+
+    <!-- Section "3", the "Our Services" Section -->
+    <section id="section3" class="cd-section sampleSection">
+        <div class="sampleContainer">
+            <div class="herop" id="section3-noshow">
+                <h3>Our Services</h3>
+                <p>Making lives easier on a daily basis</p>
             </div>
-        </div> -->
-    <!-- </div> -->
-</section>
+            <div class="hero">
+                <div class="hovercontent">
+                    <div class="hovercontentp">
+                        <p>VPI has offered a variety of services to our customers throughout the years and continues to offer more as technology rapidly grows. These services include assembly, fulfillment and distribution of literature, displays, Point-Of-Purchase (POP) and pick and pack, warehousing and logistics. POP and literature fulfillment has been a specialty at VPI for many years supported by state of the art technology enabling us to provide extraordinary results in this very important fulfillment process.</p>
+                        <a href="services.html">Discover more</a>
+                    </div>
+                </div>
+                <img src="img/new_slide3.jpg">
+            </div>
+            <div class="herop" id="section3-show">
+                <h3>Our Services</h3>
+                <p>Make your life easier on a daily basis</p>
+            </div>
+        </div>
+     </section>
 
-<section id="section3" class="cd-section">
-    <div class="section3-container">
-        <div id="section3Box">
+     <!-- Section "4", the "Work With Us" Section -->
+    <section id="section4" class="cd-section sampleSection">
+        <div class="sampleContainer">
+            <div class="herop">
+                <h3>Work With Us</h3>
+                <p>Check out some of our past partners</p>
+            </div>
+            <div class="hero">
+                <div class="hovercontent">
+                    <div class="hovercontentp">
+                        <p>VPI wants to add value to your business and make all supply chain processes convenient and efficient to ensure future success to all who are involved. We aim to support your growing goals and demands, as well as being able to accommodate any supply chain sizes that you have to offer.</p>
+                        <a href="clients.html">Discover more</a>
+                    </div>
+                </div>
+                <img src="img/new_slide4.jpg">
+            </div>
         </div>
-        <div>
-            <h3>Who</h3>
-            <h3>We</h3>
-            <h3>Support</h3>
-        </div>
-        <div id="section3Description">
-            <p>VPI supports companies such as Wal-Mart, Yankee Candle, Foster Grant International, A.T. Cross Co., and Jones Apparel, with monthly rollouts; display and kit assemblies, and daily pick and pack orders.</p>
-            <p>Our commitment to our customers remains to develop the most cost efficient logistical merchandise distribution network. As VPI continues to grow, we are striving to keep our customers goal and the success of their business as our main priority. </p>
-        </div>
-    </div>
- </section>
+    </section>
 
-<section id="section4" class="cd-section">
-    <!-- <div class="content"> -->
-        <div id="content4">
-            <h3>Join Us</h3>
-            <p><a href="clients.html">View Our Past Partners</a>
-            <a href="clients.html" id="right"></a></p>
-            <br><br>
-            <p>VPI wants to serve as a trusted partner to all of our employees. We want to add value to your business and make all supply chain processes convenient and efficient to ensure future success to all who are involved. We want to support the growing goals and demands of the customer and be able to accommodate any supply chain sizes that they have to offer. The customer’s goals and results is our main focus. We want to work to improve deliveries, reduce costs to the customers and lower risk and reduction of inventory levels.</p>
-        </div>
-        <div id="graphic4">
-            <a href="clients.html"> <img src="img/partnership.png"></a>
-        </div>
-    <!-- </div> -->
-</section>
-
-<section id="section5" class="cd-section">
-    <div class="content">
-        <div id="section5-content">
+    <section id="section5" class="cd-section">
+        <div class="content" id="section5-content">
             <h3>Vision</h3>
             <p>As a leader in the third party logistics industry we also want to constantly be improving and upgrading our processes to better serve our customers. By delivering new ideas frequently we can instill in the customer that we are the right choice for all their logistics needs. We want the work we do and the work that customers give us to be a strategic partnership, working together to better both parties involved. All of the services processes and technology that we provide will be at use to achieve the specific goals that the customer has.</p>
         </div>
-        <div>
-            <!-- <img src="img/worldmap.png"> -->
-        </div>
-    </div>
-</section>
+    </section>
 
-<!-- FOOTER -->
-<div id="footer">
-    <div id="flexbox">
-        <div class="footer-content" id="about">
-            <ul>
-                <li><h4>About</h4></li>
-                <li><a href="">Link1</a></li>
-                <li><a href="">Link2</a></li>
-                <li><a href="">Link3</a></li>
-            </ul>
+    <!-- FOOTER -->
+    <div id="footer">
+        <div id="flexbox">
+            <div class="footer-content" id="forms">
+                <ul>
+                    <li><h4>Links</h4></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">What Are We</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="clients.html">Clients</a></li>
+                    <li><a href="contact.html">Contact VPI</a></li>
+                </ul>
+            </div>
+            <div class="footer-content" id="contact">
+                <ul>
+                    <li><h4>Contact Us</h4></li>
+                    <li><a href="contact.html">Inquiries</a></li>
+                    <!-- <li><a href="careers.html">Careers</a></li> -->
+                    <li><a href="mailto:sales@vpi3pl.com">Email</a></li>
+                    <li><a href="tel:401-521-6262">Phone: 401-521-6262</a></li>
+                    <li><p>Fax: 401-331-6262</p></li>
+                    <li><a href="https://www.google.com/maps/place/100+Higginson+Ave,+Lincoln,+RI+02865/@41.8866561,-71.4124119,17z/data=!3m1!4b1!4m5!3m4!1s0x89e443689ddacc81:0xcb1e9b4f45427146!8m2!3d41.8866561!4d-71.4102232" target="_blank">100 Higginson Ave Lincoln, RI 02865</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="footer-content" id="solutions">
-            <ul>
-                <li><h4>Solutions</h4></li>
-                <li><a href="">Link1</a></li>
-                <li><a href="">Link2</a></li>
-                <li><a href="">Link3</a></li>
-            </ul>
-        </div>
-        <div class="footer-content" id="forms">
-            <ul>
-                <li><h4>Links</h4></li>
-                <li><a href="about.html">What Are We</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="clients.html">Clients</a></li>
-                <li><a href="contact.html">Contact VPI</a></li>
-            </ul>
-        </div>
-        <div class="footer-content" id="contact">
-            <ul>
-                <li><h4>Contact Us</h4></li>
-                <li><a href="contact.html">Inquiries</a></li>
-                <li><a href="mailto:sales@vpi3pl.com">Email</a></li>
-                <li><a href="tel:401-521-6262">Phone: 401-521-6262</a></li>
-                <li><p>Fax: 401-331-6262</p></li>
-                <li><a href="https://www.google.com/maps/place/100+Higginson+Ave,+Lincoln,+RI+02865/@41.8866561,-71.4124119,17z/data=!3m1!4b1!4m5!3m4!1s0x89e443689ddacc81:0xcb1e9b4f45427146!8m2!3d41.8866561!4d-71.4102232" target="_blank">100 Higginson Ave Lincoln, RI 02865</a></li>
-            </ul>
+        <div id="copyright">
+            <a href="https://www.vpi3pl.com/">Copyright © <script>document.write(new Date().getFullYear());</script>
+                Vincent Porcaro, INC. All rights reserved.</a>
         </div>
     </div>
-    <div id="copyright">
-        <a href="https://www.vpi3pl.com/">Copyright © <script>document.write(new Date().getFullYear());</script>
-            Vincent Porcaro, INC. All rights reserved.</a>
-    </div>
-</div>
-<!--- Content END --->
+    <!--- Content END --->
 
 </body>
 </html>
